--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -242,6 +242,9 @@ SA_B_1 : "𝐎ᴠᴇʀᴀʟʟ 𝐒ᴛᴀᴛs"
 SA_B_2 : "𝐆ᴇɴᴇʀᴀʟ"
 SA_B_3 : "𝐎ᴠᴇʀᴀʟʟ"
 
+SG_B_2 : "SIFRA DOWNLOAD🥰"
+SG_B_3 : "SUPPORT🥰"
+
 QU_B_1 : "𝐐ᴜᴇᴜᴇ"
 QU_B_2 : " {0} —————————— {1}"
 
